--- a/first-service/package.json
+++ b/first-service/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "echo \"Not configured yet\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
